--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/images/1.jpg":["assets/images/1.jpg"],"assets/images/2.jpg":["assets/images/2.jpg"],"assets/images/3.jpg":["assets/images/3.jpg"],"assets/images/4.jpg":["assets/images/4.jpg"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
