--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "deeras",
-    "short_name": "deeras",
+    "name": "webtests",
+    "short_name": "webtests",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
